# zerolink-python

./: Changelog.md  LICENSE.md  Makefile  README.md  TUNING.md  ZeroLink-Docs.sketch  api.yml  pyproject.toml  ruff.toml
.github/.github/workflows/: lint.yml
.github/workflows/: python-package.yml
examples/: attributes.py  basic.py  example.py  pizza.py  royals.py  shapes.py  wine.py  zerolink.ipynb
tests/: conftest.py  test_client.py  test_main.py
zero_link_client/: __init__.py  client.py  types.py
zero_link_client/api/answer/: post_vote.py
zero_link_client/api/default/: endpoints_endpoints_get.py  example_example_post.py  finetune.py  get_models_models_get.py  git_revision_git_get.py  index_get.py  post_waitlist_waitlist_post.py  status_status_get.py
zero_link_client/api/entity/: desc_entity_id.py  desc_entity_ontology.py  desc_relation.py  disambiguate.py  disambiguate_pred.py  lookup_entity.py  lookup_relation.py  search_entity.py  search_entity_fast.py  search_entity_lexical.py  search_relation_vector.py
zero_link_client/api/extract/: extract_docx.py  extract_text.py
zero_link_client/api/fact/: accept_facts.py  create_userattribute.py  create_userentity.py  create_userrule.py  create_usertriple.py  delete_fact.py  generate_facts.py  get_fact.py  post_fact.py  update_fact_entity.py  update_fact_relation.py
zero_link_client/api/kg/: get_kg.py  get_triple.py  get_triple_fast.py
zero_link_client/api/question/: explain_answer.py  get_question.py  post_question.py  related_questions.py
zero_link_client/api/session/: check_session.py  create_session.py  delete_session.py  get_session.py  get_session_entities.py  get_session_facts.py  get_user_session.py  get_user_sessions.py  update_session.py
zero_link_client/api/user/: create_user.py  get_user.py
zero_link_client/models/: answer_blob.py  assertion.py  assertion_context.py  assertion_response.py  attribute.py  body_extract_docx.py  candidate.py  candidate_fact.py  chat_session.py  check_session_response_check_session.py  create_attribute.py  create_entity.py  create_entity_response.py  create_fact_response.py  create_rule.py  create_rule_context.py  create_rule_response.py  create_triple.py  create_tune_job_response.py  create_user.py  date.py  datetime_.py  delete_fact_response_delete_fact.py  delete_session_response_delete_session.py  dimensional_quantity.py  dimensionless_quantity.py  downvote_reason.py  edge.py  entity.py  explanation.py  extract_model.py  generic_entity.py  generic_response.py  generic_triple.py  get_user_response_get_user.py  gps.py  graph.py  graph_ids.py  http_validation_error.py  match.py  (+19 more)
zerolink/: __init__.py  api.py  attribute.py  cli.py  exc.py  extract.py  foundation.py  req.py  settings.py
zerolink_client/: __init__.py  types.py
zerolink_client/api/answer/: post_vote.py
zerolink_client/api/default/: endpoints_endpoints_get.py  example_example_post.py  finetune.py  get_models_models_get.py  git_revision_git_get.py  index_get.py  post_waitlist_waitlist_post.py  status_status_get.py
zerolink_client/api/entity/: desc_entity_id.py  desc_entity_ontology.py  desc_relation.py  disambiguate.py  disambiguate_pred.py  lookup_entity.py  lookup_relation.py  search_entity.py  search_entity_fast.py  search_entity_lexical.py  (+1 more)
zerolink_client/models/: __init__.py  answer_blob.py  assertion.py  assertion_context.py  assertion_response.py  attribute.py  attribute_type.py  body_extract_docx.py  candidate.py  candidate_fact.py  chat_session.py  check_session_response_check_session.py  context_assumption.py  create_attribute.py  create_entity.py  create_entity_response.py  create_fact_response.py  create_rule.py  create_rule_context.py  create_rule_response.py  create_triple.py  create_tune_job_response.py  create_user.py  date.py  datetime_.py  delete_fact_response_delete_fact.py  delete_session_response_delete_session.py  dimensional_quantity.py  dimensionless_quantity.py  edge.py  entity.py  entity_type.py  explanation.py  generic_entity.py  generic_response.py  generic_triple.py  get_user_response_get_user.py  gps.py  graph.py  graph_ids.py  (+22 more)
(+31 files in other folders)
