[tool.poetry]
name = "zerolink"
version = "0.1.0"
description = "Interface to the ZeroLink neurosymbolic reasoner"
authors = ["Zerolink <info@zerolink.io>"]
readme = "README.md"
packages = [
    { include = "zerolink" },
    { include = "zerolink_client" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typing-extensions = "^4.9.0"
tqdm = "^4.66.1"
tenacity = "^8.2.3"
click = "^8.1.7"
click-completion = "^0.5.2"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.12.0"}
notebook = "^7.0.6"
openapi-python-client = "^0.17.1"
pytest = "^7.4.4"
ruff = "^0.1.11"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.ingest.dependencies]
pandas = "^2.1.4"
openpyxl = "^3.1.2"
python-docx = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

# Add a command line entry point for zerolink/cli.py
[tool.poetry.scripts]
zerolink = "zerolink.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 160
extend-exclude = ["zerolink_client"]

[tool.black]
target-version = ['py39']
exclude = '.venv|zerolink_client'

[tool.isort]
py_version = 36
include_trailing_comma = "true"
line_length = 160
multi_line_output = 3

[tool.mypy]
disallow_incomplete_defs = "false"
disallow_untyped_defs = "false"
#strict = "true"
pretty = "true"
warn_return_any = "true"
warn_unused_configs = "true"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
ignore_missing_imports = "true"
no_implicit_reexport = "true"
strict_optional = "true"
strict_equality = "true"
extra_checks = "true"
check_untyped_defs = "true"
disallow_subclassing_any = "true"
disallow_untyped_decorators = "true"
disallow_untyped_calls = "true"
disallow_any_generics = "true"
exclude = "zerolink_client,zerolink_client/models"
follow_imports = "silent"

[mypy.zerolink_client]
ignore_errors = "true"

[mypy.zerolink_client.models]
ignore_errors = "true"
